--- a/package.json
+++ b/package.json
@@ -1,30 +1,25 @@
 {
-  "name": "node-server-testing",
+  "name": "node-server-testing-guided",
   "version": "1.0.0",
-  "description": "Node Server Testing Challenge",
-  "main": "server.js",
+  "description": "Starter Code for Node Server Testing Module",
+  "main": "index.js",
   "scripts": {
+    "server": "nodemon index.js",
+    "start": "node index.js",
     "test": "jest --watch"
   },
-  "jest": {
-    "testEnvironment": "node"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LambdaSchool/node-server-testing.git"
-  },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/LambdaSchool/node-server-testing/issues"
-  },
-  "homepage": "https://github.com/LambdaSchool/node-server-testing#readme",
-  "devDependencies": {
-    "jest": "^24.9.0",
-    "supertest": "^4.0.2"
-  },
+  "author": "Lambda School",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "knex": "^0.20.13",
+    "pg": "^7.18.2",
+    "sqlite3": "^4.1.1"
+  },
+  "devDependencies": {
+    "jest": "^25.2.2",
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2"
   }
 }
